# kivy-reloader-vscode

./: .gitignore  ANDROID_EMULATOR_STREAMING.md  Dockerfile  README.md  download-google-fonts.sh  kivy-reloader-0.1.0.vsix  kivy-reloader.toml  kivy_reloader_server.py  package-lock.json  package.json  pyproject.toml  start-vnc.sh
.github/workflows/: release.yml
kivy-reloader-vscode/: README.md  SETUP.md
kivy-reloader-vscode/src/: dockerManager.ts  extension.ts  vncPreviewPanel.ts
src/: kivyHotReloader.ts
src/kvtestsone/: __main__.py  app.py  my.kv
src/reloader_test/: app.py  my.kv
