[project]
name = "reloader-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Py-Swift", email = "psychowaspx@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "kivy>=2.3.1",
    "kivy-reloader",
    "trio>=0.32.0",
]

[project.scripts]
reloader-test = "reloader_test:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
kivy-reloader = { git = "https://github.com/psychowasp/kivy-reloader" }
